frontend/src/interpreter/generated/PseudocodeParser.ts
// Generated from src/interpreter/grammar/Pseudocode.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { PseudocodeListener } from "./PseudocodeListener.js";
import { PseudocodeVisitor } from "./PseudocodeVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class PseudocodeParser extends antlr.Parser {
    public static readonly DECLARE = 1;
    public static readonly CONSTANT = 2;
    public static readonly INPUT = 3;
    public static readonly OUTPUT = 4;
    public static readonly PRINT = 5;
    public static readonly IF = 6;
    public static readonly THEN = 7;
    public static readonly ELSE = 8;
    public static readonly ELSEIF = 9;
    public static readonly ENDIF = 10;
    public static readonly CASE = 11;
    public static readonly OF = 12;
    public static readonly OTHERWISE = 13;
    public static readonly ENDCASE = 14;
    public static readonly FOR = 15;
    public static readonly TO = 16;
    public static readonly STEP = 17;
    public static readonly NEXT = 18;
    public static readonly WHILE = 19;
    public static readonly DO = 20;
    public static readonly ENDWHILE = 21;
    public static readonly REPEAT = 22;
    public static readonly UNTIL = 23;
    public static readonly PROCEDURE = 24;
    public static readonly ENDPROCEDURE = 25;
    public static readonly FUNCTION = 26;
    public static readonly ENDFUNCTION = 27;
    public static readonly RETURNS = 28;
    public static readonly RETURN = 29;
    public static readonly CALL = 30;
    public static readonly ARRAY = 31;
    public static readonly AND = 32;
    public static readonly OR = 33;
    public static readonly NOT = 34;
    public static readonly TRUE = 35;
    public static readonly FALSE = 36;
    public static readonly MOD = 37;
    public static readonly DIV = 38;
    public static readonly INTEGER_TYPE = 39;
    public static readonly REAL_TYPE = 40;
    public static readonly CHAR_TYPE = 41;
    public static readonly STRING_TYPE = 42;
    public static readonly BOOLEAN_TYPE = 43;
    public static readonly LARROW = 44;
    public static readonly EQUALS = 45;
    public static readonly NOTEQUAL = 46;
    public static readonly LTE = 47;
    public static readonly GTE = 48;
    public static readonly LT = 49;
    public static readonly GT = 50;
    public static readonly PLUS = 51;
    public static readonly MINUS = 52;
    public static readonly STAR = 53;
    public static readonly SLASH = 54;
    public static readonly CARET = 55;
    public static readonly AMPERSAND = 56;
    public static readonly LPAREN = 57;
    public static readonly RPAREN = 58;
    public static readonly LBRACKET = 59;
    public static readonly RBRACKET = 60;
    public static readonly COMMA = 61;
    public static readonly COLON = 62;
    public static readonly REAL_LITERAL = 63;
    public static readonly INTEGER_LITERAL = 64;
    public static readonly STRING_LITERAL = 65;
    public static readonly CHAR_LITERAL = 66;
    public static readonly IDENTIFIER = 67;
    public static readonly NEWLINE = 68;
    public static readonly WS = 69;
    public static readonly LINE_COMMENT = 70;
    public static readonly RULE_program = 0;
    public static readonly RULE_statement = 1;
    public static readonly RULE_declareStatement = 2;
    public static readonly RULE_constantStatement = 3;
    public static readonly RULE_dataType = 4;
    public static readonly RULE_assignmentStatement = 5;
    public static readonly RULE_inputStatement = 6;
    public static readonly RULE_outputStatement = 7;
    public static readonly RULE_exprList = 8;
    public static readonly RULE_ifStatement = 9;
    public static readonly RULE_caseStatement = 10;
    public static readonly RULE_caseClause = 11;
    public static readonly RULE_forStatement = 12;
    public static readonly RULE_whileStatement = 13;
    public static readonly RULE_repeatStatement = 14;
    public static readonly RULE_procedureDeclaration = 15;
    public static readonly RULE_functionDeclaration = 16;
    public static readonly RULE_paramList = 17;
    public static readonly RULE_param = 18;
    public static readonly RULE_callStatement = 19;
    public static readonly RULE_returnStatement = 20;
    public static readonly RULE_argList = 21;
    public static readonly RULE_block = 22;
    public static readonly RULE_expr = 23;
    public static readonly RULE_atom = 24;

    public static readonly literalNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, null, 
        null, "'='", "'<>'", "'<='", "'>='", "'<'", "'>'", "'+'", "'-'", 
        "'*'", "'/'", "'^'", "'&'", "'('", "')'", "'['", "']'", "','", "':'"
    ];

    public static readonly symbolicNames = [
        null, "DECLARE", "CONSTANT", "INPUT", "OUTPUT", "PRINT", "IF", "THEN", 
        "ELSE", "ELSEIF", "ENDIF", "CASE", "OF", "OTHERWISE", "ENDCASE", 
        "FOR", "TO", "STEP", "NEXT", "WHILE", "DO", "ENDWHILE", "REPEAT", 
        "UNTIL", "PROCEDURE", "ENDPROCEDURE", "FUNCTION", "ENDFUNCTION", 
        "RETURNS", "RETURN", "CALL", "ARRAY", "AND", "OR", "NOT", "TRUE", 
        "FALSE", "MOD", "DIV", "INTEGER_TYPE", "REAL_TYPE", "CHAR_TYPE", 
        "STRING_TYPE", "BOOLEAN_TYPE", "LARROW", "EQUALS", "NOTEQUAL", "LTE", 
        "GTE", "LT", "GT", "PLUS", "MINUS", "STAR", "SLASH", "CARET", "AMPERSAND", 
        "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "COLON", "REAL_LITERAL", 
        "INTEGER_LITERAL", "STRING_LITERAL", "CHAR_LITERAL", "IDENTIFIER", 
        "NEWLINE", "WS", "LINE_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "statement", "declareStatement", "constantStatement", 
        "dataType", "assignmentStatement", "inputStatement", "outputStatement", 
        "exprList", "ifStatement", "caseStatement", "caseClause", "forStatement", 
        "whileStatement", "repeatStatement", "procedureDeclaration", "functionDeclaration", 
        "paramList", "param", "callStatement", "returnStatement", "argList", 
        "block", "expr", "atom",
    ];

    public get grammarFileName(): string { return "Pseudocode.g4"; }
    public get literalNames(): (string | null)[] { return PseudocodeParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return PseudocodeParser.symbolicNames; }
    public get ruleNames(): string[] { return PseudocodeParser.ruleNames; }
    public get serializedATN(): number[] { return PseudocodeParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, PseudocodeParser._ATN, PseudocodeParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, PseudocodeParser.RULE_program);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 53;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 50;
                    this.match(PseudocodeParser.NEWLINE);
                    }
                    }
                }
                this.state = 55;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 0, this.context);
            }
            this.state = 68;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1699252350) !== 0) || _la === 67) {
                {
                this.state = 56;
                this.statement();
                this.state = 65;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
                while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                    if (alternative === 1) {
                        {
                        {
                        this.state = 58;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                        do {
                            {
                            {
                            this.state = 57;
                            this.match(PseudocodeParser.NEWLINE);
                            }
                            }
                            this.state = 60;
                            this.errorHandler.sync(this);
                            _la = this.tokenStream.LA(1);
                        } while (_la === 68);
                        this.state = 62;
                        this.statement();
                        }
                        }
                    }
                    this.state = 67;
                    this.errorHandler.sync(this);
                    alternative = this.interpreter.adaptivePredict(this.tokenStream, 2, this.context);
                }
                }
            }

            this.state = 73;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 68) {
                {
                {
                this.state = 70;
                this.match(PseudocodeParser.NEWLINE);
                }
                }
                this.state = 75;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 76;
            this.match(PseudocodeParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, PseudocodeParser.RULE_statement);
        try {
            this.state = 92;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case PseudocodeParser.DECLARE:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 78;
                this.declareStatement();
                }
                break;
            case PseudocodeParser.CONSTANT:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 79;
                this.constantStatement();
                }
                break;
            case PseudocodeParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 80;
                this.assignmentStatement();
                }
                break;
            case PseudocodeParser.INPUT:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 81;
                this.inputStatement();
                }
                break;
            case PseudocodeParser.OUTPUT:
            case PseudocodeParser.PRINT:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 82;
                this.outputStatement();
                }
                break;
            case PseudocodeParser.IF:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 83;
                this.ifStatement();
                }
                break;
            case PseudocodeParser.CASE:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 84;
                this.caseStatement();
                }
                break;
            case PseudocodeParser.FOR:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 85;
                this.forStatement();
                }
                break;
            case PseudocodeParser.WHILE:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 86;
                this.whileStatement();
                }
                break;
            case PseudocodeParser.REPEAT:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 87;
                this.repeatStatement();
                }
                break;
            case PseudocodeParser.PROCEDURE:
                this.enterOuterAlt(localContext, 11);
                {
                this.state = 88;
                this.procedureDeclaration();
                }
                break;
            case PseudocodeParser.FUNCTION:
                this.enterOuterAlt(localContext, 12);
                {
                this.state = 89;
                this.functionDeclaration();
                }
                break;
            case PseudocodeParser.CALL:
                this.enterOuterAlt(localContext, 13);
                {
                this.state = 90;
                this.callStatement();
                }
                break;
            case PseudocodeParser.RETURN:
                this.enterOuterAlt(localContext, 14);
                {
                this.state = 91;
                this.returnStatement();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public declareStatement(): DeclareStatementContext {
        let localContext = new DeclareStatementContext(this.context, this.state);
        this.enterRule(localContext, 4, PseudocodeParser.RULE_declareStatement);
        try {
            this.state = 126;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 6, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 94;
                this.match(PseudocodeParser.DECLARE);
                this.state = 95;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 96;
                this.match(PseudocodeParser.COLON);
                this.state = 97;
                this.match(PseudocodeParser.ARRAY);
                this.state = 98;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 99;
                this.expr(0);
                this.state = 100;
                this.match(PseudocodeParser.COLON);
                this.state = 101;
                this.expr(0);
                this.state = 102;
                this.match(PseudocodeParser.RBRACKET);
                this.state = 103;
                this.match(PseudocodeParser.OF);
                this.state = 104;
                this.dataType();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 106;
                this.match(PseudocodeParser.DECLARE);
                this.state = 107;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 108;
                this.match(PseudocodeParser.COLON);
                this.state = 109;
                this.match(PseudocodeParser.ARRAY);
                this.state = 110;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 111;
                this.expr(0);
                this.state = 112;
                this.match(PseudocodeParser.COLON);
                this.state = 113;
                this.expr(0);
                this.state = 114;
                this.match(PseudocodeParser.COMMA);
                this.state = 115;
                this.expr(0);
                this.state = 116;
                this.match(PseudocodeParser.COLON);
                this.state = 117;
                this.expr(0);
                this.state = 118;
                this.match(PseudocodeParser.RBRACKET);
                this.state = 119;
                this.match(PseudocodeParser.OF);
                this.state = 120;
                this.dataType();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 122;
                this.match(PseudocodeParser.DECLARE);
                this.state = 123;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 124;
                this.match(PseudocodeParser.COLON);
                this.state = 125;
                this.dataType();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constantStatement(): ConstantStatementContext {
        let localContext = new ConstantStatementContext(this.context, this.state);
        this.enterRule(localContext, 6, PseudocodeParser.RULE_constantStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 128;
            this.match(PseudocodeParser.CONSTANT);
            this.state = 129;
            this.match(PseudocodeParser.IDENTIFIER);
            this.state = 130;
            this.match(PseudocodeParser.EQUALS);
            this.state = 131;
            this.expr(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public dataType(): DataTypeContext {
        let localContext = new DataTypeContext(this.context, this.state);
        this.enterRule(localContext, 8, PseudocodeParser.RULE_dataType);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 133;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 39)) & ~0x1F) === 0 && ((1 << (_la - 39)) & 31) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignmentStatement(): AssignmentStatementContext {
        let localContext = new AssignmentStatementContext(this.context, this.state);
        this.enterRule(localContext, 10, PseudocodeParser.RULE_assignmentStatement);
        try {
            this.state = 173;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 135;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 136;
                this.match(PseudocodeParser.EQUALS);
                this.state = 137;
                this.expr(0);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 138;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 139;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 140;
                this.expr(0);
                this.state = 141;
                this.match(PseudocodeParser.RBRACKET);
                this.state = 142;
                this.match(PseudocodeParser.EQUALS);
                this.state = 143;
                this.expr(0);
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 145;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 146;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 147;
                this.expr(0);
                this.state = 148;
                this.match(PseudocodeParser.COMMA);
                this.state = 149;
                this.expr(0);
                this.state = 150;
                this.match(PseudocodeParser.RBRACKET);
                this.state = 151;
                this.match(PseudocodeParser.EQUALS);
                this.state = 152;
                this.expr(0);
                }
                break;
            case 4:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 154;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 155;
                this.match(PseudocodeParser.LARROW);
                this.state = 156;
                this.expr(0);
                }
                break;
            case 5:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 157;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 158;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 159;
                this.expr(0);
                this.state = 160;
                this.match(PseudocodeParser.RBRACKET);
                this.state = 161;
                this.match(PseudocodeParser.LARROW);
                this.state = 162;
                this.expr(0);
                }
                break;
            case 6:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 164;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 165;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 166;
                this.expr(0);
                this.state = 167;
                this.match(PseudocodeParser.COMMA);
                this.state = 168;
                this.expr(0);
                this.state = 169;
                this.match(PseudocodeParser.RBRACKET);
                this.state = 170;
                this.match(PseudocodeParser.LARROW);
                this.state = 171;
                this.expr(0);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public inputStatement(): InputStatementContext {
        let localContext = new InputStatementContext(this.context, this.state);
        this.enterRule(localContext, 12, PseudocodeParser.RULE_inputStatement);
        try {
            this.state = 183;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 8, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 175;
                this.match(PseudocodeParser.INPUT);
                this.state = 176;
                this.match(PseudocodeParser.IDENTIFIER);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 177;
                this.match(PseudocodeParser.INPUT);
                this.state = 178;
                this.match(PseudocodeParser.IDENTIFIER);
                this.state = 179;
                this.match(PseudocodeParser.LBRACKET);
                this.state = 180;
                this.expr(0);
                this.state = 181;
                this.match(PseudocodeParser.RBRACKET);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public outputStatement(): OutputStatementContext {
        let localContext = new OutputStatementContext(this.context, this.state);
        this.enterRule(localContext, 14, PseudocodeParser.RULE_outputStatement);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 185;
            _la = this.tokenStream.LA(1);
            if(!(_la === 4 || _la === 5)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 186;
            this.exprList();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public exprList(): ExprListContext {
        let localContext = new ExprListContext(this.context, this.state);
        this.enterRule(localContext, 16, PseudocodeParser.RULE_exprList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 188;
            this.expr(0);
            this.state = 193;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 61) {
                {
                {
                this.state = 189;
                this.match(PseudocodeParser.COMMA);
                this.state = 190;
                this.expr(0);
                }
                }
                this.state = 195;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public ifStatement(): IfStatementContext {
        let localContext = new IfStatementContext(this.context, this.state);
        this.enterRule(localContext, 18, PseudocodeParser.RULE_ifStatement);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.match(PseudocodeParser.IF);
            this.state = 197;
            this.expr(0);
            this.state = 198;
            this.match(PseudocodeParser.THEN);
            this.state = 200;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 199;
                this.match(PseudocodeParser.NEWLINE);
                }
                }
                this.state = 202;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 68);
            this.state = 204;
            this.block();
            this.state = 222;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 13, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 206;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    do {
                        {
                        {
                        this.state = 205;
                        this.match(PseudocodeParser.NEWLINE);
                        }
                        }
                        this.state = 208;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    } while (_la === 68);
                    this.state = 210;
                    this.match(PseudocodeParser.ELSEIF);
                    this.state = 211;
                    this.expr(0);
                    this.state = 212;
                    this.match(PseudocodeParser.THEN);
                    this.state = 214;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                    do {
                        {
                        {
                        this.state = 213;
                        this.match(PseudocodeParser.NEWLINE);
                        }
                        }
                        this.state = 216;
                        this.errorHandler.sync(this);
                        _la = this.tokenStream.LA(1);
                    } while (_la === 68);
                    this.state = 218;
                    this.block();
                    }
                    }
                }
                this.state = 224;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 13, this.context);
            }
            this.state = 237;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 16, this.context) ) {
            case 1:
                {
                this.state = 226;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                do {
                    {
                    {
                    this.state = 225;
